--- a/templates/coinflip.html
+++ b/templates/coinflip.html
@@ -422,8 +422,8 @@ body {
         </div>
 
         <div class="coinflip-side-select">
-            <div class="side-option selected" data-side="heads">🪙 Heads</div>
-            <div class="side-option" data-side="tails">🪙 Tails</div>
+            <div class="side-option selected" data-side="Heads">🪙 Heads</div>
+            <div class="side-option" data-side="Tails">🪙 Tails</div>
         </div>
 
 
